--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "google-spreadsheet": "^3.1.15",
     "leaflet": "^1.7.1"
   }
